examples/test/testpolicy493.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy493
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key4: value23
      key7: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value2
          key1: value11
      podSelector:
        matchLabels:
          key8: value40
          key41: value8
